# Acom-Project

./: README.md
acom_preview/: .env.example  README.md  compose.yml  dockerfile  index.html  package-lock.json  package.json
acom_preview/src/: App.tsx  index.css
acom_preview/src/hooks/: use-chat-data.ts
acom_preview/src/lib/: chat-api.ts
backend/: .env.example  .gitignore  README.md  compose.yml  dockerfile  entrypoint.sh  info.txt  manage.py  pyproject.toml
backend/integrador_de_chats/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/message_manager/: services.py  tests.py  urls.py  views.py
backend/mock_integration/: apps.py  tests.py  urls.py  views.py
backend/orchestrator/: models.py  services.py  tasks.py  tests.py  urls.py  views.py
backend/orchestrator/migrations/: 0001_initial.py  0002_remove_orchestratormessages_cd_identifier_client_and_more.py  0003_rename_ds_platform_orchestratormessages_ds_channel_name_and_more.py  0004_commonmessagesreference_and_more.py  0005_alter_commonmessagesreference_ds_message.py
backend/slack_integration/: tasks.py  urls.py  views.py
backend/telegram_integration/: tasks.py  urls.py  views.py
